fav_icon_change

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- ........................................link_root............... -->
     <link rel="stylesheet" href="/assets/css/root.css">
     <!-- .........................link_fav_icon......................... -->
-    <link rel="shortcut icon" href="/assets/image/svg/green_star.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/image/svg/icon.png" type="image/x-icon">
     <title>Design Dump</title>
 
 </head>
