--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
             <div class="img_1 d_grid">
                 <img class="w-100 h-100 img" src="/assets/image/svg/img_1.png" alt="img_1">
             </div>
-            <div class="img_2 d_grid">
+            <div class="img_2 ">
                 <img class="w-100 h-100" src="/assets/image/svg/img_2.png" alt="img_2">
             </div>
-            <div class="img_3 d_grid">
+            <div class="img_3 ">
                 <img class="w-100 h-100" src="/assets/image/svg/img_3.png" alt="img_3">
             </div>
-            <div class="img_4 d_grid">
+            <div class="img_4 ">
                 <img class="w-100 h-100" src="/assets/image/svg/img_4.png" alt="img_4">
             </div>
             <div class="img_5">
